puppetv2/customer/esbu/files/rt/iptables
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
# Standard setup
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp --icmp-type echo-reply -j ACCEPT
-A INPUT -p icmp --icmp-type destination-unreachable -j ACCEPT
-A INPUT -p icmp --icmp-type time-exceeded -j ACCEPT
-A INPUT -p icmp --icmp-type any -m limit --limit 6/second -j ACCEPT
-A INPUT -d 224.0.0.251 -p udp -m udp --dport 5353 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
# Drop broadcast traffic
-A INPUT -d 255.255.255.255 -j DROP
# Host specific rules
-A INPUT -p udp --sport bootps -j DROP
# Allow stuff from the management LAN
# ACCEPT ssh from gswitch_admin
-A INPUT -s 172.16.40.0/24 -p tcp --dport ssh -j ACCEPT
# ACCEPT ssh from gswitch_unix
-A INPUT -s 172.17.7.0/24 -p tcp --dport ssh -j ACCEPT
# ACCEPT snmp from gswitch_monitoring
-A INPUT -s 172.16.40.0/24 -p udp --dport snmp -j ACCEPT
# ACCEPT ssh from gswitch_technical_wired
-A INPUT -s 172.17.3.0/24 -p tcp --dport ssh -j ACCEPT
# ACCEPT ssh from gswitch_technical_wireless
-A INPUT -s 172.17.4.0/24 -p tcp --dport ssh -j ACCEPT
# ACCEPT snmp from gsing_monitoring
-A INPUT -s 172.19.40.0/24 -p udp --dport snmp -j ACCEPT
# ACCEPT ssh from gsing_technical_wired
-A INPUT -s 172.19.3.0/24 -p tcp --dport ssh -j ACCEPT
# ACCEPT ssh from gsing_technical_wireless
-A INPUT -s 172.17.4.0/24 -p tcp --dport ssh -j ACCEPT
# ACCEPT ssh from equinix_admin
-A INPUT -s 172.16.40.0/24 -p tcp --dport ssh -j ACCEPT
# ACCEPT http from any
-A INPUT -p tcp --dport http -j ACCEPT
# ACCEPT https from any
-A INPUT -p tcp --dport https -j ACCEPT
-A INPUT -s 172.16.40.54 -p tcp --dport 3306 -j ACCEPT
-A INPUT -s 172.17.7.54 -p tcp --dport 3306 -j ACCEPT
-A INPUT -s 172.16.40.15 -p tcp --dport 3306 -j ACCEPT
-A INPUT -s 172.16.40.16 -p tcp --dport 3306 -j ACCEPT
-A INPUT -s 172.16.40.39 -p tcp --dport 3306 -j ACCEPT
-A INPUT -s 172.16.40.38 -p tcp --dport 3306 -j ACCEPT
-A INPUT -s 172.16.40.20 -p tcp --dport 3306 -j ACCEPT
-A INPUT -s 172.16.40.27 -p tcp --dport 3306 -j ACCEPT
-A INPUT -s 210.87.32.72 -p tcp --dport 3306 -j ACCEPT
-A INPUT -s 172.17.3.211 -p tcp --dport 3306 -j ACCEPT
-A INPUT -s 172.17.6.14 -p tcp --dport 25 -j ACCEPT
-A INPUT -s 172.17.7.117 -p tcp --dport 873 -j ACCEPT
-A INPUT -s 172.17.7.118 -p tcp --dport 873 -j ACCEPT
-A INPUT -s 172.16.40.126 -p tcp --dport 3306 -j ACCEPT
-A INPUT -p tcp --dport 873 -s nms.harbour -j ACCEPT
-A INPUT -p tcp --dport 873 -s 172.16.40.20 -j ACCEPT
# Log & Reject everything else
-A INPUT -j LOG --log-prefix "DENY INPUT " --log-tcp-sequence --log-ip-options
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -j REJECT
# Don't forward anything
-A FORWARD -j DROP
COMMIT
